Added Functionaility for player creation and game Handling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,20 @@
 h1 {
     background-color: red;
 }
+
+
+#deck-handler {
+    visibility: hidden;
+}
+
+.containter{
+    width : 100%;
+    display : flex;
+    justify-content: center;
+}
+
+.deck-table{
+    width : 100%;
+    display : flex;
+    justify-content: space-around;
+}
